--- a/Cpp_Crash_Course.vcxproj
+++ b/Cpp_Crash_Course.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Cpp_Crash_Course.cpp" />
+    <ClCompile Include="sameTree.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
